新增utf-8解碼/編碼功能

--- a/index.html
+++ b/index.html
@@ -3,19 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-    <title>繁簡轉換器</title>
+    <title>繁簡轉換器 & UTF-8 編碼</title>
     <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
     <div class="container" style="width: 100%;">
         <div class="textarea-group">
-            <label for="traditionalText">繁體中文</label>
-            <textarea id="traditionalText" placeholder="在此輸入繁體中文..."></textarea>
+            <label for="source-select">來源</label>
+            <select id="source-select">
+                <option value="traditional" selected>繁體中文 (Traditional)</option>
+                <option value="simplified">简体中文 (Simplified)</option>
+                <option value="utf8">UTF-8 編碼</option>
+            </select>
+            <textarea id="sourceText" placeholder="在此輸入..."></textarea>
         </div>
         <div class="textarea-group">
-            <label for="simplifiedText">简体中文</label>
-            <textarea id="simplifiedText" placeholder="在此输入简体中文..."></textarea>
+            <label for="target-select">目標</label>
+            <select id="target-select">
+                <option value="traditional">繁體中文 (Traditional)</option>
+                <option value="simplified" selected>简体中文 (Simplified)</option>
+                <option value="utf8">UTF-8 編碼</option>
+            </select>
+            <textarea id="targetText" placeholder="轉換結果..."></textarea>
         </div>
     </div>
     <script src="./renderer.js"></script>
