--- a/index.html
+++ b/index.html
@@ -3,30 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-    <title>繁簡轉換器 & UTF-8 編碼</title>
+    <title>繁簡轉換器 & 字元編碼</title>
     <link rel="stylesheet" href="./style.css">
-
 </head>
 <body>
-    <div class="container" style="width: 100%;">
-        <div class="textarea-group">
-            <label for="source-select">來源</label>
-            <select id="source-select">
-                <option value="traditional" selected>繁體中文 (Traditional)</option>
-                <option value="simplified">简体中文 (Simplified)</option>
-                <option value="utf8">UTF-8 編碼</option>
-            </select>
-            <textarea id="sourceText" placeholder="在此輸入..."></textarea>
-        </div>
-        <div class="textarea-group">
-            <label for="target-select">目標</label>
-            <select id="target-select">
-                <option value="traditional">繁體中文 (Traditional)</option>
-                <option value="simplified" selected>简体中文 (Simplified)</option>
-                <option value="utf8">UTF-8 編碼</option>
-            </select>
-            <textarea id="targetText" placeholder="轉換結果..."></textarea>
-        </div>
+    <div class="app-container">
+        <main class="container">
+            <div class="textarea-group">
+                <label for="source-select">來源</label>
+                <select id="source-select">
+                    <option value="traditional" selected>繁體中文 (Traditional)</option>
+                    <option value="simplified">简体中文 (Simplified)</option>
+                    <option value="utf8">UTF-8 編碼</option>
+                </select>
+                <textarea id="sourceText" placeholder="在此輸入內容..."></textarea>
+            </div>
+            <div class="textarea-group">
+                <label for="target-select">目標</label>
+                <select id="target-select">
+                    <option value="traditional">繁體中文 (Traditional)</option>
+                    <option value="simplified" selected>简体中文 (Simplified)</option>
+                    <option value="utf8">UTF-8 編碼</option>
+                </select>
+                <textarea id="targetText" placeholder="轉換結果將顯示於此..."></textarea>
+            </div>
+        </main>
     </div>
     <script src="./renderer.js"></script>
 </body>
